# openapi-generator

./: .gitignore  .urmzd.sr.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  install.sh
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  release.yml
crates/oag-cli/: Cargo.toml  README.md
crates/oag-cli/src/: main.rs
crates/oag-core/: Cargo.toml  README.md
crates/oag-core/src/: config.rs  error.rs  lib.rs
crates/oag-core/src/ir/: grouping.rs  mod.rs  operations.rs  schemas.rs  types.rs
crates/oag-core/src/parse/: components.rs  media_type.rs  mod.rs  operation.rs  parameter.rs  ref_resolve.rs  request_body.rs  response.rs  schema.rs  security.rs  server.rs  spec.rs
crates/oag-core/src/transform/: mod.rs  name_normalizer.rs  promote_inline.rs  schema_resolver.rs  spec_to_ir.rs  sse_detector.rs
crates/oag-core/tests/: ir_tests.rs  normalize_tests.rs  parse_tests.rs
crates/oag-core/tests/fixtures/: anthropic-messages.yaml  mixed-endpoints.yaml  petstore-3.2.yaml  petstore-polymorphic.yaml  sse-chat.yaml
crates/oag-fastapi-server/: Cargo.toml  README.md
crates/oag-fastapi-server/src/: generator.rs  lib.rs  type_mapper.rs
crates/oag-fastapi-server/src/emitters/: app.rs  mod.rs  models.rs  routes.rs  scaffold.rs  sse.rs  tests.rs
crates/oag-fastapi-server/templates/: app.py.j2  conftest.py.j2  models.py.j2  pyproject.toml.j2  routes.py.j2  ruff.toml.j2  sse.py.j2  test_routes.py.j2
crates/oag-node-client/: Cargo.toml  README.md
crates/oag-node-client/src/: generator.rs  lib.rs  type_mapper.rs
crates/oag-node-client/src/emitters/: bundled.rs  client.rs  mod.rs  scaffold.rs  split.rs  tests.rs  types.rs
crates/oag-node-client/templates/: client.test.ts.j2  client.ts.j2  index.ts.j2  package.json.j2  sse.ts.j2  tsconfig.json.j2  tsdown.config.ts.j2  types.ts.j2
crates/oag-node-client/tests/: typescript_compile.rs
crates/oag-react/: Cargo.toml  README.md
crates/oag-react-swr-client/: Cargo.toml  README.md
crates/oag-react-swr-client/src/: generator.rs  lib.rs
crates/oag-react-swr-client/src/emitters/: hooks.rs  index.rs  mod.rs  provider.rs  tests.rs
crates/oag-react-swr-client/templates/: hooks.test.ts.j2  hooks.ts.j2  index.ts.j2  provider.ts.j2
crates/oag-react-swr-client/tests/: react_compile.rs
crates/oag-react/src/: generator.rs  lib.rs
crates/oag-react/src/emitters/: hooks.rs  mod.rs
crates/oag-typescript/: Cargo.toml  README.md
crates/oag-typescript/src/: generator.rs  lib.rs  type_mapper.rs
crates/oag-typescript/src/emitters/: client.rs  index.rs  mod.rs  scaffold.rs  sse.rs
crates/oag-typescript/templates/: package.json.j2  tsconfig.json.j2
doc/: default-config.yaml  demo.tape
examples/anthropic-messages/: .urmzd.oag.yaml
examples/petstore/: .urmzd.oag.yaml
examples/petstore-polymorphic/: .urmzd.oag.yaml
examples/sse-chat/: .urmzd.oag.yaml
tests/integration/: react_compile.rs  typescript_compile.rs
