[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/openapi-generator"
authors = ["urmzd"]
homepage = "https://github.com/urmzd/openapi-generator"

[workspace.dependencies]
# Internal crates
oag-core = { path = "crates/oag-core", version = "0.4.1" }
oag-node-client = { path = "crates/oag-node-client", version = "0.4.1" }
oag-react-swr-client = { path = "crates/oag-react-swr-client", version = "0.4.1" }
oag-fastapi-server = { path = "crates/oag-fastapi-server", version = "0.4.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Collections
indexmap = { version = "2", features = ["serde"] }

# Case conversion
heck = "0.5"

# Templating
minijinja = "2"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
env_logger = "0.11"
log = "0.4"

# Testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
