[package]
name = "oag-cli"
description = "CLI for the oag OpenAPI code generator"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[[bin]]
name = "oag"
path = "src/main.rs"

[dependencies]
oag-core = { workspace = true }
oag-node-client = { workspace = true }
oag-react-swr-client = { workspace = true }
oag-fastapi-server = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
