[package]
name = "oag-react-swr-client"
description = "React/SWR client generator for oag"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
oag-core = { workspace = true }
oag-node-client = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_yaml_ng = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
